<resources>
    <string name="app_name">Module 2.3 BT1</string>
    <string name="qu_n_l_nh_n_vi_n">Quản lý nhân viên</string>
    <string name="n">Nữ</string>
    <string name="gi_i_t_nh">Giới tính:</string>
    <string name="nam">Nam</string>
    <string name="t_n_nv">Tên NV:</string>
    <string name="m_nv">Mã NV:</string>
    <string name="danh_s_ch_nh_n_vi_n">Danh sách nhân viên</string>
    <string name="nh_p_nh_n_vi_n">Nhập nhân viên</string>
    <string name="vui_l_ng_nh_p">Vui lòng nhập</string>
    <string name="vui_l_ng_nh_p1">Vui lòng nhập</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
</resources>